--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     image: 'nginx:alpine'
     working_dir: /application
     volumes:
-      - './laravel-php:/application'
+      - './laravel:/application'
       - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
     ports:
       - '8000:80'
@@ -49,7 +49,7 @@ services:
     build: phpdocker/php-fpm
     working_dir: /application
     volumes:
-      - './laravel-php:/application'
+      - './laravel:/application'
       - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.2/fpm/conf.d/99-overrides.ini'
       - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.2/cli/conf.d/99-overrides.ini'
     networks:
