--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -13,4 +13,10 @@ server {
         fastcgi_param SCRIPT_FILENAME /application/public$fastcgi_script_name;
         include fastcgi_params;
     }
+
+    location ~* \.(jpg|jpeg|gif|png|css|js|ico|woff|woff2|ttf|svg|eot)$ {
+        try_files $uri =404;
+        access_log off;
+        expires max;
+    }
 }
